@@ -1,0 +1,10 @@
+[Data],,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+Lane,Sample_ID,Sample_Name,GenomeFolder,Index,Index2,bait_name,default_library_type,default_tag_sequence,default_tagtwo_sequence,email_addresses,email_addresses_of_followers,email_addresses_of_managers,email_addresses_of_owners,gbs_plex_name,is_control,is_pool,lane_id,lane_priority,library_name,organism,organism_taxon_id,project_cost_code,project_id,project_name,purpose,qc_state,request_id,required_insert_size_range,sample_accession_number,sample_cohort,sample_common_name,sample_consent_withdrawn,sample_description,sample_donor_id,sample_id,sample_name,sample_public_name,sample_reference_genome,sample_supplier_name,spiked_phix_tag_index,study_accession_number,study_alignments_in_bam,study_contains_nonconsented_human,study_contains_nonconsented_xahuman,study_description,study_id,study_name,study_reference_genome,study_separate_y_chromosome_data,study_title,tag_index,sample_is_control,sample_control_type,
+1,29622116,8818236,,GGGATCCT,CCATCCAA,,Standard,GGGATCCT,CCATCCAA,,,,,nCoV-2019,0,0,29622179,0,29622116,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818236,4424218,8818236,,SARS-CoV-2 (MN908947.3),A1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,1,1,,
+1,29622117,8818237,,GATACTCC,ACACCCAG,,Standard,GATACTCC,ACACCCAG,,,,,nCoV-2019/V2,0,0,29622179,0,29622117,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818237,4424219,8818237,,SARS-CoV-2 (MN908947.3),B1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,2,1,,
+1,29622118,8818238,,GCCAAGCA,CTCTCCTC,,Standard,GCCAAGCA,CTCTCCTC,,,,,nCoV-2019/V3,0,0,29622179,0,29622118,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818238,4424220,8818238,,SARS-CoV-2 (MN908947.3),C1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,3,1,,
+1,21210572,phiX_for_spiked_buffers,,ACAACGCAATC,,,,ACAACGCAATC,,,,,,,1,0,22706627,0,21210572,,10847,,,,standard,,,,,,,0,,,1255141,phiX_for_spiked_buffers,,PhiX (Sanger-SNPs),,888,,1,0,0,None,198,Illumina Controls, ,0,,888,0,,
+2,21210572,phiX_for_spiked_buffers,,ACAACGCAATC,,,,ACAACGCAATC,,,,,,,1,0,22706627,0,21210572,,10847,,,,standard,,,,,,,0,,,1255141,phiX_for_spiked_buffers,,PhiX (Sanger-SNPs),,888,,1,0,0,None,198,Illumina Controls, ,0,,888,0,,
+2,29622116,8818236,,GGGATCCT,CCATCCAA,,Standard,GGGATCCT,CCATCCAA,,,,,nCoV-2019,0,0,29622179,0,29622116,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818236,4424218,8818236,,SARS-CoV-2 (MN908947.3),A1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,1,1,,
+2,29622117,8818237,,GATACTCC,ACACCCAG,,Standard,GATACTCC,ACACCCAG,,,,,nCoV-2019/V2,0,0,29622179,0,29622117,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818237,4424219,8818237,,SARS-CoV-2 (MN908947.3),B1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,2,1,,
+2,29622118,8818238,,GCCAAGCA,CTCTCCTC,,Standard,GCCAAGCA,CTCTCCTC,,,,,nCoV-2019/V3,0,0,29622179,0,29622118,,,S10068,,,standard,,,from:50 to:600,,,,0,,8818238,4424220,8818238,,SARS-CoV-2 (MN908947.3),C1,,,1,0,0,Development of sequencing and library prep protocols using Human DNA from Promega,3073,Team51_Development,,0,Team51_Development,3,1,,
